// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-iqnttn-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-iqnttn-RadioContainer[aria-disabled='false'],
.cache-iqnttn-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 .e1oi9aa76 {
  fill: #e5dbfd;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 {
  fill: #b3144d;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffd3e3;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true']>label,
.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa73 {
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa74 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa74 .e1oi9aa76 {
  fill: #f3f3f4;
}

.cache-1muk44o-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1muk44o-RadioInput+.e1oi9aa74 .e1oi9aa75 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1muk44o-RadioInput:checked+svg .e1oi9aa75 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1muk44o-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1oi9aa74 {
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 .e1oi9aa76 {
  fill: #f1eefc;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:focus-visible+.e1oi9aa74 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffebf2;
}

.cache-965flr-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-965flr-Ring .e1oi9aa76 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-ymc80m-Stack efjor120"
    >
      <div
        aria-disabled="false"
        class="cache-iqnttn-RadioContainer e1oi9aa72"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1muk44o-RadioInput e1oi9aa73"
          id="test-test"
          name="test"
          type="radio"
          value="test"
        />
        <svg
          class="cache-965flr-Ring e1oi9aa74"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-1niv4ql-InnerCircleRing e1oi9aa76"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-ivayk3-RadioMark e1oi9aa75"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="cache-shj57p-StyledLabel e1oi9aa71"
          for="test-test"
        >
          Radio field
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-iqnttn-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-iqnttn-RadioContainer[aria-disabled='false'],
.cache-iqnttn-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 .e1oi9aa76 {
  fill: #e5dbfd;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 {
  fill: #b3144d;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffd3e3;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true']>label,
.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa73 {
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa74 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa74 .e1oi9aa76 {
  fill: #f3f3f4;
}

.cache-1muk44o-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1muk44o-RadioInput+.e1oi9aa74 .e1oi9aa75 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1muk44o-RadioInput:checked+svg .e1oi9aa75 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1muk44o-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1oi9aa74 {
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 .e1oi9aa76 {
  fill: #f1eefc;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:focus-visible+.e1oi9aa74 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffebf2;
}

.cache-965flr-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-965flr-Ring .e1oi9aa76 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-ymc80m-Stack efjor120"
    >
      <div
        aria-disabled="false"
        class="cache-iqnttn-RadioContainer e1oi9aa72"
        data-checked="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-1muk44o-RadioInput e1oi9aa73"
          id="test-checked"
          name="test"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-965flr-Ring e1oi9aa74"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-1niv4ql-InnerCircleRing e1oi9aa76"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-ivayk3-RadioMark e1oi9aa75"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="cache-shj57p-StyledLabel e1oi9aa71"
          for="test-checked"
        >
          Radio field checked
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-iqnttn-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-iqnttn-RadioContainer[aria-disabled='false'],
.cache-iqnttn-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 .e1oi9aa76 {
  fill: #e5dbfd;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 {
  fill: #b3144d;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffd3e3;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true']>label,
.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa73 {
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa74 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa74 .e1oi9aa76 {
  fill: #f3f3f4;
}

.cache-1muk44o-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1muk44o-RadioInput+.e1oi9aa74 .e1oi9aa75 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1muk44o-RadioInput:checked+svg .e1oi9aa75 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1muk44o-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1oi9aa74 {
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 .e1oi9aa76 {
  fill: #f1eefc;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:focus-visible+.e1oi9aa74 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffebf2;
}

.cache-965flr-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-965flr-Ring .e1oi9aa76 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-ymc80m-Stack efjor120"
    >
      <div
        aria-disabled="true"
        class="cache-iqnttn-RadioContainer e1oi9aa72"
        data-checked="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="cache-1muk44o-RadioInput e1oi9aa73"
          disabled=""
          id="test-disabled"
          name="test"
          type="radio"
          value="disabled"
        />
        <svg
          class="cache-965flr-Ring e1oi9aa74"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-1niv4ql-InnerCircleRing e1oi9aa76"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-ivayk3-RadioMark e1oi9aa75"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="cache-shj57p-StyledLabel e1oi9aa71"
          for="test-disabled"
        >
          Radio field disabled
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-iqnttn-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-iqnttn-RadioContainer[aria-disabled='false'],
.cache-iqnttn-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 .e1oi9aa76 {
  fill: #e5dbfd;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 {
  fill: #b3144d;
}

.cache-iqnttn-RadioContainer:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffd3e3;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true']>label,
.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa73 {
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa74 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-iqnttn-RadioContainer[aria-disabled='true'] .e1oi9aa74 .e1oi9aa76 {
  fill: #f3f3f4;
}

.cache-1muk44o-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1muk44o-RadioInput+.e1oi9aa74 .e1oi9aa75 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1muk44o-RadioInput:checked+svg .e1oi9aa75 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1muk44o-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1oi9aa74 {
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 .e1oi9aa76 {
  fill: #f1eefc;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:focus-visible+.e1oi9aa74 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffebf2;
}

.cache-965flr-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-965flr-Ring .e1oi9aa76 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-ymc80m-Stack efjor120"
    >
      <div
        aria-disabled="false"
        class="cache-iqnttn-RadioContainer e1oi9aa72"
        data-checked="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1muk44o-RadioInput e1oi9aa73"
          id="test-events"
          name="test"
          type="radio"
          value="events"
        />
        <svg
          class="cache-965flr-Ring e1oi9aa74"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="cache-1niv4ql-InnerCircleRing e1oi9aa76"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="cache-ivayk3-RadioMark e1oi9aa75"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="cache-shj57p-StyledLabel e1oi9aa71"
          for="test-events"
        >
          Radio field events
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
